# paper-namer

./: .gitignore  AGENTS.md  README.md  config.toml  config.toml.example  main.py  organizer.py  pyproject.toml
.github/workflows/: ci.yml
docs/: lmstudio.md
lib/: __init__.py  errors.py  extractor.py  index_writer.py  llm.py  renamer.py
tests/: test_extractor.py  test_index_writer.py  test_llm.py  test_llm_integration.py  test_renamer.py
